--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "preferGlobal": true,
     "version": "0.0.1",
     "author": "Troy McCabe <troymccabe@gmail.com>",
-    "description": "Notify chat occupants of crypto donations",
+    "description": "Retrieves market information for cryptocurrencies from Discord",
     "license": "MIT",
     "engines": {
         "node": ">=0.10"
